# TextColorDisplay

./: CD.py  DrawColoredText.py  README.md  pyproject.toml  setup.py
